# rag-example

./: .env.example  .gitignore  Cargo.toml  log.txt  results.json
assets/: homer.txt  research.txt  system-prompt.txt
logs/2025-01-30T23:18:35.100520+00:00/: chat_window.txt  results.json
logs/2025-01-30T23:21:18.252995+00:00/: chat_window.txt  results.json
src/: character_text_splitter.rs  main.rs  store.rs
src/models/: embedding.rs  message_pair.rs  mod.rs
