[package]
name = "vector-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dotenv = "0.15.0"
fastembed = "4.4.0"
openai-api-rs = "5.2.4"
pgvector = { version = "0.4", features = ["sqlx"] }
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres" ] }
text-splitter = { features = ["tokenizers"], version = "0.22.0" }
tokenizers = {version = "0.21.0", features = ["http"]}
tokio = { version = "1.43", features = ["full"] }
